--- a/src/ConsoleApp/packages.config
+++ b/src/ConsoleApp/packages.config
@@ -3,8 +3,12 @@
   <package id="Hangfire" version="1.6.14" targetFramework="net452" />
   <package id="Hangfire.Core" version="1.6.14" targetFramework="net452" />
   <package id="Hangfire.SqlServer" version="1.6.14" targetFramework="net452" />
-  <package id="Microsoft.Owin" version="3.0.0" targetFramework="net452" />
+  <package id="Microsoft.Owin" version="3.1.0" targetFramework="net452" />
+  <package id="Microsoft.Owin.Diagnostics" version="3.1.0" targetFramework="net452" />
+  <package id="Microsoft.Owin.Host.HttpListener" version="3.1.0" targetFramework="net452" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.0" targetFramework="net452" />
+  <package id="Microsoft.Owin.Hosting" version="3.1.0" targetFramework="net452" />
+  <package id="Microsoft.Owin.SelfHost" version="3.1.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="5.0.1" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
 </packages>
