--- a/src/ConsoleApp/packages.config
+++ b/src/ConsoleApp/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autofac" version="4.6.0" targetFramework="net452" />
   <package id="Hangfire" version="1.6.14" targetFramework="net452" />
+  <package id="Hangfire.Autofac" version="2.3.1" targetFramework="net452" />
   <package id="Hangfire.Core" version="1.6.14" targetFramework="net452" />
   <package id="Hangfire.SqlServer" version="1.6.14" targetFramework="net452" />
   <package id="Microsoft.Owin" version="3.1.0" targetFramework="net452" />
